--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ p {
 }
 
 .search-section {
-  background-image: url("./images/search-section-bg-img.jpg");
+  background-image: url("../public/images/search-section-bg-img.jpg");
   background-size: 100% 220%;
   background-repeat: no-repeat;
   height: 350px;
