--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,10 @@
   margin: 0 20px;
 }
 
+.navbar h5 {
+  margin: 0;
+}
+
 p {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.5rem;
@@ -38,11 +42,11 @@ p {
 }
 
 .search-bar {
-  padding: 10px 0 10px 10px;
+  padding: 10px;
   display: inline;
   text-align: center;
   background-color: white;
-  box-shadow: 5px 7px 7px #888888;
+  /* box-shadow: 5px 7px 7px #888888; */
   border: 1px solid grey;
   border-radius: 4px;
 }
@@ -61,16 +65,16 @@ p {
 
 .search-box {
   border: 0px solid;
-  width: 35%;
+  width: 30%;
   margin-left: 10px;
 }
 
 .search-btn {
   border: none;
   padding: 9px 20px 9px 20px;
-  margin: 0;
+  margin-left: 10px;
   background-color: #2f89fc;
-  border-radius: 0 4px 4px 0;
+  border-radius: 4px
 }
 
 .list-divider {
@@ -101,7 +105,7 @@ hr {
 
 .flex-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -162,7 +166,7 @@ hr {
 }
 
 .shop-table .value p{
-  margin-left: -35px;
+  margin-left: -45px;
   font-size: 1rem;
   display: inline;
   position: relative;
@@ -226,4 +230,36 @@ hr {
 
 .td-selected {
   color: lightseagreen;
+}
+
+@media (max-width: 767px) {
+  .search-btn {
+    border: none;
+    padding: 9px 20px 9px 20px;
+    margin: 20px auto;
+    background-color: #2f89fc;
+    border-radius: 4px;
+    display: block;
+  }
+
+  .search-box {
+    width: 45%;
+  }
+
+  .footer .main-table {
+    width: 80%;
+  }
+
+}
+
+@media (max-width: 480px){
+  .footer .main-table {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1024px){
+  .flex-container {
+    justify-content: center;
+  }
 }
