add some functionality for admin

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,18 @@ p {
   margin-left: 10px;
 }
 
+.admin-text {
+  display: inline;
+  margin-left: 5px;
+}
+
+.admin-icon {
+  margin-right: 7px;
+  margin-left: 3px;
+  align-items: center;
+  margin-bottom: 2px;
+}
+
 .search-section {
   background-image: url("../public/images/search-section-bg-img.jpg");
   background-size: 100% 220%;
@@ -104,10 +116,12 @@ hr {
 }
 
 .flex-container {
-  display: flex;
-  justify-content: flex-start;
+  display: inline-flex;
+  min-width: 100%;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  overflow: hidden;
 }
 
 .catg-card {
@@ -123,7 +137,7 @@ hr {
   padding-bottom: 10px;
 }
 
-.catg-img {
+.catg-img, .add-shop-img {
   width: 250px;
   height: 120px;
 }
